Terminando ejercicio de triangulos

--- a/figuras/figs.html
+++ b/figuras/figs.html
@@ -133,6 +133,10 @@
                                 <div class="col-12 col-sm-6 mb-2">
                                     <button type="button" onclick="calcularAreaTriangulo()" class="btn bg-secondary-app fw-bold btn-sm w-100">Calcular área</button>
                                 </div>
+
+                                <div class="col-12 col-sm-6 mb-2">
+                                    <button type="button" onclick="calcularAlturaTriangulo()" class="btn bg-secondary-app fw-bold btn-sm w-100">Calcular altura</button>
+                                </div>
                             </div>
                           </form>
                         </div>
