--- a/figuras/descuentos.html
+++ b/figuras/descuentos.html
@@ -68,12 +68,12 @@
                             </div>
                             
                             <div class="mb-4">
-                                <label for="InputDiscount" class="form-label mb-1 font-14">Ingresa tu cupón de descuento</label>
-                                <input type="text" class="form-control bg-dark border border-secondary text-white" id="InputDiscount" placeholder="Ingresa un numero...">
+                                <label for="InputCoupon" class="form-label mb-1 font-14">Ingresa tu cupón de descuento</label>
+                                <input type="text" class="form-control bg-dark border border-secondary text-white" id="InputCoupon" placeholder="Ingresa un numero...">
                             </div>
                             <div class="row">
                                 <div class="col-12 col-sm-6 mb-2 mx-auto">
-                                    <button type="button" onclick="calcularDescuento()" class="btn bg-secondary-app fw-bold btn-sm w-100">Calcular Descuento</button>
+                                    <button type="button" onclick="onClickButtonPriceDiscount()" class="btn bg-secondary-app fw-bold btn-sm w-100">Calcular Descuento</button>
                                     <!-- En el onclik se pone la funcion con parentesis, porque... es una función después de todo -->
                                 </div>
 
