Comments in figs

--- a/figuras/figs.html
+++ b/figuras/figs.html
@@ -70,6 +70,7 @@
                                 <div class="col-12 col-sm-6 mb-2">
                                     <button type="button" onclick="calcularPerimetroCuadrado()" class="btn bg-secondary-app fw-bold btn-sm w-100">Calcular perímetro</button>
                                     <!-- En el onclik se pone la funcion con parentesis, porque... es una función después de todo -->
+                                    <!-- Para que el boton no recargue la página cancelamos el type="submit" por el type="button" -->
                                 </div>
     
                                 <div class="col-12 col-sm-6 mb-2">
