--- a/promedios/promedio.html
+++ b/promedios/promedio.html
@@ -70,7 +70,8 @@
         </footer>
     </div>
 
-    <script src="promedio.js"></script>
+    <script src="mediana.js"></script>
+    <!-- <script src="promedio.js"></script> -->
 </body>
 
 </html>
